--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/main.css">
-    <title>Fresh Prince</title>
+    <title>Príncipe Fresco</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="shortcut icon" type="image/jpg" href="./img/logo.png" />
 </head>
-<body>
-    
 
-    <script src="/scripts/script.js"></script>
+<body>
+    <header class="container">
+                <div class="header-sections">
+                    <a href="index.html"><img class="logo" src="./img/logo.png" alt="logo"/></a>
+                    <nav class="navbar">
+                        <ul class="nav-list">
+                            <li><a class="nav-item" href="#">Shop</a></li>
+                            <li><a class="nav-item" href="#">Collections</a></li>
+                        </ul>
+                    </nav>
+                    <div class="icons">
+                        <li><a href="index.html"><img class="header-icon" src="./img/icon-user.png" alt=""></a></li>
+                        <li><a href="index.html"><img class="header-icon" src="./img/icon-shopping.png" alt=""></a></li>
+                    </div>
+                </div>
+               
+            </div>
+        </div>
+    </header>
+    <script src="./scripts/script.js"></script>
 </body>
+
 </html>
