--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,50 @@
     <link rel="stylesheet" href="/styles/main.css">
     <title>Fresh Prince</title>
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <div class="container-imagenes-laterales">
+            <img class="imagenes" src="/img/01.png">
+            <img class="imagenes" src="/img/02.png">
+            <img class="imagenes" src="/img/03.png">
+            <img class="imagenes" src="/img/04.png">
+        </div>
+        <div class="container-imagenes-principales">
+            <img class="imagenes" src="/img/01.png">
+            <img class="imagenes" src="/img/02.png">
+            <img class="imagenes" src="/img/03.png">
+            <img class="imagenes" src="/img/04.png">
+        </div>
+        <div class="container-datos-del-producto">
+            <h2 class="nombre-producto">Crown Sweatshirt</h2>
+            <p class="precio">$ 80.00</p>
+            <span>Size</span>
+            <div class="container-tallas">
+                <a class="tallas">S</a>
+                <a class="tallas">M</a>
+                <a class="tallas">L</a>
+                <a class="tallas">XL</a>
+                <a class="tallas">XXL</a>
+            </div>
+            <div class="container-botones">
+                <button class="añadir-carrito">ADD TO CART</button>
+                <button class="compra-ahora">BUY IT NOW</button>
+            </div>
+            <div class="container-descripcion">
+                <p class="descripcion">Let them know you’re 90s royalty with this official The Fresh Prince crown pattern sweater. Throw
+                    vintage vibes that
+                    Uncle Phil would approve of. Featuring woven The Fresh Prince logo on chest. Navy crown print crew
+                    neck sweatshirt with
+                    white ribbed collar and waist band. Cotton/Poly blend.
+                </p>
+            </div>
+        </div>
+    </div>
+
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <script src="/scripts/script.js"></script>
 </body>
+
 </html>
