--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
 
     <div class="container-body">
         <div class="container-imagenes-laterales">
-            <img class="imagenes" src="/img/01.png">
-            <img class="imagenes" src="/img/02.png">
-            <img class="imagenes" src="/img/03.png">
-            <img class="imagenes" src="/img/04.png">
+            <img class="imagenes-laterales" src="/img/01.png">
+            <img class="imagenes-laterales" src="/img/02.png">
+            <img class="imagenes-laterales" src="/img/03.png">
+            <img class="imagenes-laterales" src="/img/04.png">
         </div>
         <div class="container-imagenes-principales">
-            <img class="imagenes" src="/img/01.png">
-            <img class="imagenes" src="/img/02.png">
-            <img class="imagenes" src="/img/03.png">
-            <img class="imagenes" src="/img/04.png">
+            <img class="imagenes-principales" src="/img/01.png">
+            <img class="imagenes-principales" src="/img/02.png">
+            <img class="imagenes-principales" src="/img/03.png">
+            <img class="imagenes-principales" src="/img/04.png">
         </div>
         <div class="container-datos-del-producto">
             <h2 class="nombre-producto">Crown Sweatshirt</h2>
-            <p class="precio">$ 80.00</p>
+            <p class="precio-producto">$ 80.00</p>
             <span>Size</span>
             <div class="container-tallas">
-                <a class="tallas">S</a>
+                <a class="tallas active">S</a>
                 <a class="tallas">M</a>
                 <a class="tallas">L</a>
                 <a class="tallas">XL</a>
