--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="shortcut icon" type="image/jpg" href="./img/logo.png" />
 </head>
@@ -21,12 +23,12 @@
             <nav class="navbar">
                 <ul class="nav-list">
                     <li><a class="nav-item" href="#">Shop</a></li>
-                    <li><a class="nav-item" href="#">Collections</a></li>
+                    <li><a class="nav-item" href="#items">Collections</a></li>
                 </ul>
             </nav>
             <div class="icons">
                 <li><a href="register.html"><img class="header-icon" src="./img/icon-user.png" alt=""></a></li>
-                <li><a href="index.html"><img class="header-icon" src="./img/icon-shopping.png" alt=""></a></li>
+                <li><a href="#items"><img class="header-icon" src="./img/icon-shopping.png" alt=""></a></li>
             </div>
         </div>
     </header>
@@ -76,21 +78,21 @@
     </h2>
     <div id="items" class="card"></div>
 
-    <div class="containerYouMayAlsoLike">
-        <template id="template-card">
-
-            <div class="card">
-                <div class="card-body">
-                    <h5 id="productTitle">Title</h5>
-                    <img id="image" src="" alt=""></img>
-                    <p id="price">Price</p>
-                    <button id="button" class="btn-add-cart">Add</button>
-                </div>
+    <template class="container" id="template-card">
+        <div class="col-3 mb-2">
+          <div class="card">
+            <div class="card-body">
+                <h5 id="productTitle">Title</h5>
+                <img id="image" src="" alt="" width="250" height="350"></img>
+                <p id="price">Price</p>
+                <button id="button" id="btn-add" class="btn btn-dark">Add</button>
             </div>
-        </template>
-    </div>
+          </div>
+        </div>
+      </template>
 
     <!-- Template Carrito -->
+    
     <div class="container">
         <h4>Shopping Cart</h4>
         <table class="table">
@@ -98,7 +100,7 @@
                 <tr>
                     <th scope="col">ID.</th>
                     <th scope="col">Item</th>
-                    <th scope="col">Precio</th>
+                    <th scope="col">Price</th>
                 </tr>
             </thead>
             <tbody id="itemsShoppingCart"></tbody>
