--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
     <div class="container-body">
         <div class="container-imagenes-laterales">
-            <img id="thumbnail_1" class="imagenes-laterales" src="/img/01.png">
-            <img id="thumbnail_2" class="imagenes-laterales" src="/img/02.png">
-            <img id="thumbnail_3" class="imagenes-laterales" src="/img/03.png">
+            <img id="thumbnail_1" class="imagenes-laterales" src="./img/01.png">
+            <img id="thumbnail_2" class="imagenes-laterales" src="./img/02.png">
+            <img id="thumbnail_3" class="imagenes-laterales" src="./img/03.png">
         </div>
         <div class="container-imagenes-principales">
-            <img id="main_image_1" class="imagenes-principales" src="/img/01.png">
-            <img id="main_image_2" class="imagenes-principales" src="/img/02.png">
-            <img id="main_image_3" class="imagenes-principales" src="/img/03.png">
+            <img id="main_image_1" class="imagenes-principales" src="./img/01.png">
+            <img id="main_image_2" class="imagenes-principales" src="./img/02.png">
+            <img id="main_image_3" class="imagenes-principales" src="./img/03.png">
         </div>
         <div class="container-datos-del-producto">
             <h2 id="product_name" class="nombre-producto">Crown Sweatshirt</h2>
@@ -112,7 +112,7 @@
             <th id="idProduct" scope="row"></th>
             <td id="name"></td>
             <td id="price">$ <span></span></td>
-            <td><button id="btnDelete">Delete</button></td>
+            <td><button id="btn-delete" class="btn-delete">Delete</button></td>
         </tr>
     </template>
 
